// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading Elements renders as <p> if no "as" prop provided 1`] = `
.c0 {
  font-weight: 600;
  font-size: 2.5rem;
  line-height: 3rem;
  color: #FFFFFF;
}

<p
  className="c0"
  color="bulma.100"
  size="alpha"
>
  Aplha Heading
</p>
`;

exports[`Heading Elements renders as an element if "as" prop provided 1`] = `
.c0 {
  font-weight: 600;
  font-size: 2.5rem;
  line-height: 3rem;
  color: #FFFFFF;
}

<h2
  className="c0"
  color="bulma.100"
  size="alpha"
>
  Alpha Heading
</h2>
`;

exports[`Heading Sizes alpha size renders properly 1`] = `
.c0 {
  font-weight: 600;
  font-size: 2.5rem;
  line-height: 3rem;
  color: #FFFFFF;
}

<h1
  className="c0"
  color="bulma.100"
  size="alpha"
>
  Aplha Heading
</h1>
`;

exports[`Heading Sizes bravo size renders properly 1`] = `
.c0 {
  font-weight: 600;
  font-size: 2rem;
  line-height: 2.5rem;
  color: #FFFFFF;
}

<h1
  className="c0"
  color="bulma.100"
  size="bravo"
>
  Bravo Heading
</h1>
`;

exports[`Heading Sizes charlie size renders properly 1`] = `
.c0 {
  font-weight: 400;
  font-size: 1.5rem;
  line-height: 2rem;
  color: #FFFFFF;
}

<h1
  className="c0"
  color="bulma.100"
  size="charlie"
>
  Charlie Heading
</h1>
`;

exports[`Heading Sizes delta size renders properly 1`] = `
.c0 {
  font-weight: 400;
  font-size: 1.25rem;
  line-height: 2rem;
  color: #FFFFFF;
}

<h1
  className="c0"
  color="bulma.100"
  size="delta"
>
  Delta Heading
</h1>
`;

exports[`Heading Sizes echo size renders properly 1`] = `
.c0 {
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5rem;
  color: #FFFFFF;
}

<h1
  className="c0"
  color="bulma.100"
  size="echo"
>
  Echo Heading
</h1>
`;

exports[`Heading renders with a color 1`] = `
.c0 {
  font-weight: 600;
  font-size: 2.5rem;
  line-height: 3rem;
  color: #0CD664;
}

<h1
  className="c0"
  color="piccolo.100"
  size="alpha"
>
  Alpha Heading
</h1>
`;
